@@ -16,6 +16,7 @@ Coccinella-0.94.9 (04????): 	Short summary --
 	- new component mechanism for plugins
 	- removed all addons stuff, and moved to plugins
 	- windows taskbar
+	- added privacy/filter support
 
 
 Coccinella-0.94.8 (040305): 	Short summary --
